# MGMT

./: .gitignore  CHANGELOG.md  PORTABLE.md  README.md  RELEASE_CHECKLIST.md  RELEASE_FINAL_CHECKLIST.md  SPEC.md  TEST_AND_BUILD_GUIDE.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
.github/workflows/: ci-release.yml
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/crypto/: mod.rs
src-tauri/src/database/: mod.rs
src-tauri/src/models/: mod.rs
src-tauri/src/services/: mod.rs
src-tauri/src/utils/: error.rs
src/components/common/: DatePickerInput.tsx  SearchableSelect.tsx
src/components/features/: AccessUserManagerModal.tsx  AccountDetail.tsx  AccountList.tsx  AccountTypeManagerModal.tsx  AppSettingsModal.tsx  AuditLogModal.tsx  CreateAccountModal.tsx  CustomerDetailPanel.tsx  CustomerManagerModal.tsx  EditAccountModal.tsx  PasswordGenerator.tsx  TOTPViewer.tsx
src/components/layout/: Header.tsx  Sidebar.tsx
src/pages/: Dashboard.tsx  LockScreen.tsx  SetupScreen.tsx
src/stores/: authStore.ts  i18nStore.ts  themeStore.ts  vaultStore.ts
src/utils/: clipboard.ts
