[package]
name = "secure-vault"
version = "1.0.0"
description = "SecureVault - Enterprise Password Manager"
authors = ["SecureVault"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "secure_vault_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.1", features = [] }

[dependencies]
tauri = { version = "2.11.1", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-log = { version = "2", features = ["colored"] }
tauri-plugin-clipboard-manager = "2"
tauri-plugin-notification = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-process = "2"
tauri-plugin-os = "2"
tauri-plugin-autostart = "2"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

rusqlite = { version = "0.31", features = ["bundled"] }

argon2 = "0.5"
aes-gcm = "0.10"
rand = "0.8"
base64 = "0.22"
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
hmac = "0.12"
totp-rs = { version = "5.4", features = ["gen_secret", "otpauth"] }

thiserror = "1.0"
anyhow = "1.0"
tokio = { version = "1", features = ["sync", "rt"] }
parking_lot = "0.12"
once_cell = "1.19"
directories = "5"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
